android/app/.cxx/Debug/1o3njq6j/arm64-v8a/android_gradle_build_stdout_proj-libs_arm64-v8a.txt
ninja: Entering directory `D:\Flutter\tinyrobots\tinyrobots\android\app\.cxx\Debug\1o3njq6j\arm64-v8a'
[1/2] Building CXX object CMakeFiles/proj-libs.dir/native-lib.cpp.o
FAILED: CMakeFiles/proj-libs.dir/native-lib.cpp.o 
C:\Users\MUHAMM~1\AppData\Local\Android\Sdk\ndk\231~1.777\TOOLCH~1\llvm\prebuilt\WINDOW~1\bin\CLANG_~1.EXE --target=aarch64-none-linux-android21 --sysroot="C:/Users/Muhammad Uzair/AppData/Local/Android/Sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/sysroot" -Dproj_libs_EXPORTS -ID:/Flutter/tinyrobots/tinyrobots/android/app/src/main/cpp/../../../../distribution/gperf/include -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security -fexceptions -frtti -stdlib=libc++ -std=gnu++11 -g  -fno-limit-debug-info -fPIC -MD -MT CMakeFiles/proj-libs.dir/native-lib.cpp.o -MF CMakeFiles\proj-libs.dir\native-lib.cpp.o.d -o CMakeFiles/proj-libs.dir/native-lib.cpp.o -c D:/Flutter/tinyrobots/tinyrobots/android/app/src/main/cpp/native-lib.cpp
D:/Flutter/tinyrobots/tinyrobots/android/app/src/main/cpp/native-lib.cpp:105:58: error: invalid application of 'sizeof' to an incomplete type 'PJ_CONTEXT' (aka 'pj_ctx')
        jobject byteBuffer = env->NewDirectByteBuffer(C, sizeof(PJ_CONTEXT));
                                                         ^     ~~~~~~~~~~~~
D:/Flutter/tinyrobots/tinyrobots/android/app/src/main/cpp/../../../../distribution/gperf/include\proj.h:358:8: note: forward declaration of 'pj_ctx'
struct pj_ctx;
       ^
1 error generated.
ninja: build stopped: subcommand failed.
